# mogan

./: .coveragerc  .gitignore  .gitreview  .testr.conf  .zuul.yaml  @  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  cover.sh  local.conf  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/: cleanup.sh  regenerate-samples.sh
api-ref/source/: availability-zone.inc  conf.py  flavors.inc  index.rst  instance-management.inc  instances.inc  parameters.yaml  types.inc  urls.inc
devstack/: README.rst  placement  plugin.sh  rsd_simulator  settings
devstack/gate/: gate_hook.sh
doc/ext/: versioned_notifications.py
doc/notification_samples/: create-server-error.json  instance-create-start.json  server-create-end.json  server-create-error.json  server-create-start.json  server-delete-end.json  server-delete-start.json  server-rebuild-end.json  server-rebuild-error.json  server-rebuild-start.json
doc/source/: api.rst  conf.py  index.rst  installation.rst  sample_config.rst  sample_policy.rst  states.rst  usage.rst
etc/: apache-mogan.template  mogan-uwsgi.ini.sample
etc/mogan/: README.mogan.conf  README.policy.json.txt  mogan.conf.sample  policy.json.sample
etc/nimble/: README.nimble.conf  api_paste.ini  nimble.conf.sample  policy.json  policy.json.sample
mogan/: __init__.py  metadata.py  service_auth.py  utils.py  version.py
mogan/api/: app.py  app.wsgi  config.py  expose.py  hooks.py
mogan/baremetal/: driver.py
mogan/cinder/: __init__.py
mogan/cmd/: __init__.py  api.py  consoleauth.py  dbsync.py  engine.py  scheduler.py  serialproxy.py  shellinabox.py  shellinaboxproxy.py  socatproxy.py
mogan/common/: config.py  constants.py  context.py  exception.py  flow_utils.py  fsm.py  i18n.py  ironic.py  keystone.py  paths.py  policy.py  profiler.py  rpc.py  service.py  short_id.py  states.py  utils.py  yamlutils.py
mogan/conf/: __init__.py  api.py  auth.py  cache.py  cinder.py  configdrive.py  database.py  default.py  engine.py  glance.py  ironic.py  keystone.py  neutron.py  opts.py  placement.py  quota.py  rsd.py  scheduler.py  serial_console.py  shellinabox.py
mogan/console/: shellinabox.py  shellinaboxproxy.py  websocketproxy.py
mogan/consoleauth/: manager.py  rpcapi.py
mogan/db/: api.py  migration.py
mogan/engine/: api.py  base_manager.py  configdrive.py  manager.py  metadata.py  netutils.py  rpcapi.py  task_states.py
mogan/image/: __init__.py  api.py  glance.py
mogan/network/: __init__.py  api.py
mogan/notifications/: base.py
mogan/objects/: __init__.py  aggregate.py  base.py  compute_disk.py  compute_node.py  compute_port.py  fields.py  flavor.py  instance.py  instance_fault.py  instance_nics.py  instance_type.py  keypair.py  quota.py  server.py  server_fault.py  server_group.py  server_groups.py  server_nic.py  server_nics.py  server_type.py
mogan/scheduler/: base_filter.py  base_weight.py  driver.py  filter_scheduler.py  manager.py  node_manager.py  rpcapi.py  scheduler_options.py  utils.py
mogan/storage/: __init__.py  api.py
mogan/tests/: base.py  policy_fixture.py
mogan/volume/: __init__.py  api.py
nimble/: __init__.py  version.py
nimble/api/: app.py  config.py  hooks.py
nimble/cmd/: __init__.py  api.py  dbsync.py  engine.py
nimble/common/: config.py  constants.py  context.py  exception.py  flow_utils.py  i18n.py  ironic.py  keystone.py  neutron.py  paths.py  policy.py  rpc.py  service.py  utils.py
nimble/conf/: __init__.py  api.py  configdrive.py  database.py  default.py  engine.py  glance.py  ironic.py  keystone.py  neutron.py  opts.py  scheduler.py
nimble/db/: api.py  migration.py
nimble/engine/: :w  api.py  base_manager.py  configdrive.py  manager.py  netutils.py  rpcapi.py  status.py
nimble/image/: __init__.py  api.py  glance.py
nimble/network/: __init__.py  api.py
nimble/objects/: __init__.py  base.py  fields.py  flavor.py  instance.py  instance_type.py
nimble/tests/: base.py  policy_fixture.py
releasenotes/notes/: add-keypair-support-for-instances-7768dca78c75c9b8.yaml  add-keypair-support-for-servers-7768dca78c75c9b8.yaml  console-support-1da6376550c48789.yaml  create-instance-taskflow-607aab72a8e96c00.yaml  create-server-taskflow-607aab72a8e96c00.yaml  floating-ip-associate-unassociate-7675d0c7a1f7ed87.yaml  introduce-guru-mechanism-c0668e20caec3eef.yaml  introduce-guru-mechanism-f9945a7e9cb57998.yaml  (+15 more)
tools/: install_venv.py  install_venv_common.py  mogan.bash_completion  tox_install.sh  with_venv.sh
(+435 files in other folders)
