[metadata]
name = nimble
summary = Standalone Baremetal Service with Ironic
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Nimble
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    nimble

[entry_points]
mogan.engine.scheduler.filters =
    AvailabilityZoneFilter = mogan.engine.scheduler.filters.availability_zone_filter:AvailabilityZoneFilter
    InstanceTypeFilter = mogan.engine.scheduler.filters.instance_type_filter:InstanceTypeFilter
    CapabilitiesFilter = mogan.engine.scheduler.filters.capabilities_filter:CapabilitiesFilter
    JsonFilter = mogan.engine.scheduler.filters.json_filter:JsonFilter

oslo.config.opts =
    nimble = mogan.conf.opts:list_opts

oslo.policy.policies =
    nimble.api = mogan.common.policy:list_policies

console_scripts =
    nimble-api = mogan.cmd.api:main
    nimble-engine = mogan.cmd.engine:main
    nimble-dbsync = mogan.cmd.dbsync:main

mogan.database.migration_backend =
    sqlalchemy = mogan.db.sqlalchemy.migration

tempest.test_plugins =
    nimble_tests = mogan.tests.tempest.plugin:NimbleTempestPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nimble/locale
domain = nimble

[update_catalog]
domain = nimble
output_dir = nimble/locale
input_file = nimble/locale/nimble.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nimble/locale/nimble.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
