[metadata]
name = mogan
summary = Baremetal Compute Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Mogan
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    mogan

[entry_points]
mogan.engine.scheduler.filters =
    AvailabilityZoneFilter = mogan.engine.scheduler.filters.availability_zone_filter:AvailabilityZoneFilter
    InstanceTypeFilter = mogan.engine.scheduler.filters.instance_type_filter:InstanceTypeFilter
    CapabilitiesFilter = mogan.engine.scheduler.filters.capabilities_filter:CapabilitiesFilter
    PortsFilter = mogan.engine.scheduler.filters.ports_filter:PortsFilter
    JsonFilter = mogan.engine.scheduler.filters.json_filter:JsonFilter
mogan.engine.scheduler.weights =
    PortWeigher = mogan.engine.scheduler.weights.port:PortWeigher

oslo.config.opts =
    mogan = mogan.conf.opts:list_opts

oslo.policy.policies =
    mogan.api = mogan.common.policy:list_policies

console_scripts =
    mogan-api = mogan.cmd.api:main
    mogan-engine = mogan.cmd.engine:main
    mogan-dbsync = mogan.cmd.dbsync:main

mogan.database.migration_backend =
    sqlalchemy = mogan.db.sqlalchemy.migration

tempest.test_plugins =
    mogan_tests = mogan.tests.tempest.plugin:MoganTempestPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = mogan/locale
domain = mogan

[update_catalog]
domain = mogan
output_dir = mogan/locale
input_file = mogan/locale/mogan.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = mogan/locale/mogan.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
